; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_posix-cpu-timers.c_thread_group_cputimer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_posix-cpu-timers.c_thread_group_cputimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.thread_group_cputimer }
%struct.thread_group_cputimer = type { i32, i32, %struct.task_cputime }
%struct.task_cputime = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @thread_group_cputimer(%struct.task_struct* %0, %struct.task_cputime* %1) #0 {
  %3 = alloca %struct.task_struct*, align 8
  %4 = alloca %struct.task_cputime*, align 8
  %5 = alloca %struct.thread_group_cputimer*, align 8
  %6 = alloca %struct.task_cputime, align 4
  %7 = alloca i64, align 8
  store %struct.task_struct* %0, %struct.task_struct** %3, align 8
  store %struct.task_cputime* %1, %struct.task_cputime** %4, align 8
  %8 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %9 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store %struct.thread_group_cputimer* %11, %struct.thread_group_cputimer** %5, align 8
  %12 = load %struct.thread_group_cputimer*, %struct.thread_group_cputimer** %5, align 8
  %13 = getelementptr inbounds %struct.thread_group_cputimer, %struct.thread_group_cputimer* %12, i32 0, i32 1
  %14 = load i64, i64* %7, align 8
  %15 = call i32 @spin_lock_irqsave(i32* %13, i64 %14)
  %16 = load %struct.thread_group_cputimer*, %struct.thread_group_cputimer** %5, align 8
  %17 = getelementptr inbounds %struct.thread_group_cputimer, %struct.thread_group_cputimer* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %28, label %20

20:                                               ; preds = %2
  %21 = load %struct.thread_group_cputimer*, %struct.thread_group_cputimer** %5, align 8
  %22 = getelementptr inbounds %struct.thread_group_cputimer, %struct.thread_group_cputimer* %21, i32 0, i32 0
  store i32 1, i32* %22, align 4
  %23 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %24 = call i32 @thread_group_cputime(%struct.task_struct* %23, %struct.task_cputime* %6)
  %25 = load %struct.thread_group_cputimer*, %struct.thread_group_cputimer** %5, align 8
  %26 = getelementptr inbounds %struct.thread_group_cputimer, %struct.thread_group_cputimer* %25, i32 0, i32 2
  %27 = call i32 @update_gt_cputime(%struct.task_cputime* %26, %struct.task_cputime* %6)
  br label %28

28:                                               ; preds = %20, %2
  %29 = load %struct.task_cputime*, %struct.task_cputime** %4, align 8
  %30 = load %struct.thread_group_cputimer*, %struct.thread_group_cputimer** %5, align 8
  %31 = getelementptr inbounds %struct.thread_group_cputimer, %struct.thread_group_cputimer* %30, i32 0, i32 2
  %32 = bitcast %struct.task_cputime* %29 to i8*
  %33 = bitcast %struct.task_cputime* %31 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %32, i8* align 4 %33, i64 4, i1 false)
  %34 = load %struct.thread_group_cputimer*, %struct.thread_group_cputimer** %5, align 8
  %35 = getelementptr inbounds %struct.thread_group_cputimer, %struct.thread_group_cputimer* %34, i32 0, i32 1
  %36 = load i64, i64* %7, align 8
  %37 = call i32 @spin_unlock_irqrestore(i32* %35, i64 %36)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @thread_group_cputime(%struct.task_struct*, %struct.task_cputime*) #1

declare dso_local i32 @update_gt_cputime(%struct.task_cputime*, %struct.task_cputime*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
